ui/dashboard.css
/*------------reset------------*/
*, *::before, *::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}


/*---------whole page----------*/
body {
    background: black;
    width: 100vw;
    height: 100vh;

    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
}


/*----------dashboard----------*/
#dashboard {
    position: relative;

    container-type: inline-size;
    container-name: dashboard;

    width: min(95vw, calc(90vh * (16/9)));
    height: min(90vh, calc(95vw / (16/9)));
 
    background-image: url("../assets/ui/Bg5.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
 
    border: 2px solid #0BFFEB;
    box-shadow: 0 0 30px #0BFFEB, inset 0 0 60px rgba(11,255,235,0.04);    /* only 4% opacity on the inside, might remove later */
}

/*-----------panels------------*/
.panel {
    position: absolute;
    display: flex;
    flex-direction: column;
    padding: clamp(2px, 0.4cqw, 4px);
    border-radius: 6px;
    
    color: white;
    font-family: "Share Tech Mono", monospace;
    font-size: clamp(6px, 0.75cqw, 11px);
    line-height: 1.55;

    border: 1px solid rgba(11, 255, 235, 0.35);
    overflow-y: auto;
}

/*---------scrollbars----------*/
.panel::-webkit-scrollbar {
    width: 4px;
    height: 8px;
}

.panel::-webkit-scrollbar-track {
    background: transparent;
}

.panel::-webkit-scrollbar-thumb {
    background: transparent;
    border-radius: 8px;
}

.panel::-webkit-scrollbar-thumb:hover {
    background: #00FFCC;
    box-shadow: 0 0 20px #FF00BF, 0 0 40px #FF00BF, 0 0 40px #FF00BF;
}


.panel h2 {
    flex-shrink: 0;
    color: white;
    font-family: "Orbitron", sans-serif;
    font-size: clamp(7px, 1.15cqw, 14px);
    line-height: 1.60;
    letter-spacing: 0.08em;
    text-transform: uppercase;

    margin: -3px 0 clamp(4px, 0.6cqw, 10px) 0;
    padding: 0px;
    position: sticky;
    top: 0;
    
    
    border: 1px solid rgba(11, 255, 235, 0.35);
    z-index: 1;

    background: rgba(11, 255, 235, 0.35);
    border: none;
    backdrop-filter: none;
}

.panel-p {
    margin: 0;
}

.panel-content {
    overflow-y: auto;
    flex: 1;
    padding: clamp(3px, 0.5cqw, 7px) clamp(4px, 0.6cqw, 8px);
}

/*---------status box----------*/
#status-box {
    container-type: inline-size;
    container-name: status-box;
    
    top: 5.2%;
    left: 37%;
    width: 26%;
    height: 18%;

    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;

    background: transparent;
    border: none;
    backdrop-filter: none;
}

#status-p {
    box-sizing: border-box;
    width: 100%;
    height: 100%;

    padding: clamp(2px, 5.2%, 4px);

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    color: white;

    font-family: "Share Tech Mono", monospace;
    font-size: clamp(10px, 6.5cqw, 20px);
    line-height: 1.25;
}


/*---------atmosphere----------*/
#atm-box {
    top: 46%;
    left: 21.8%;
    width: 16.8%;
    height: 44%;

    background: transparent;
    border: none;
    backdrop-filter: none;
    /* background: rgba(252, 255, 49, 0.2); */
}

#atm-p {
    /*background: rgba(0, 255, 0, 0.2);*/
    box-sizing: border-box;
    width: 100%;

    margin: -3px 0 clamp(2px, 0.5cqw, 8px) 0;
    padding: 0;

    display: block;
    text-align: left;

    color: white;

    font-family: "Share Tech Mono", monospace;
    font-size: clamp(8px, 1cqw, 10px);
    line-height: 1.25;

    background: transparent;
    border: none;
    backdrop-filter: none;
}

/*-------------OGA-------------*/
#oga-box {
    top: 66%;
    left: 80.2%;
    width: 16.8%;
    height: 24%;

    background: transparent;
    border: none;
    backdrop-filter: none;
    background: rgba(252, 255, 49, 0.2);
}

#oga-p {
    /*background: rgba(0, 255, 0, 0.2);*/
    box-sizing: border-box;
    width: 100%;

    margin: -3px 0 clamp(2px, 0.5cqw, 8px) 0;
    padding: 0;

    display: block;
    text-align: left;

    color: white;

    font-family: "Share Tech Mono", monospace;
    font-size: clamp(8px, 1cqw, 10px);
    line-height: 1.25;

    background: transparent;
    border: none;
    backdrop-filter: none;
}

/*----------sabatier-----------*/
#sab-box {
    top: 66%;
    left: 3%;
    width: 16.8%;
    height: 24%;

    background: transparent;
    border: none;
    backdrop-filter: none;
    background: rgba(252, 255, 49, 0.2);
}

#sab-p {
    /*background: rgba(0, 255, 0, 0.2);*/
    box-sizing: border-box;
    width: 100%;

    margin: -3px 0 clamp(2px, 0.5cqw, 8px) 0;
    padding: 0;

    display: block;
    text-align: left;

    color: white;

    font-family: "Share Tech Mono", monospace;
    font-size: clamp(8px, 1cqw, 10px);
    line-height: 1.25;

    background: transparent;
    border: none;
    backdrop-filter: none;
}

/*------------water------------*/
#water-box {
    top: 46%;
    left: 41.5%;
    width: 16.8%;
    height: 44%;

    background: transparent;
    border: none;
    backdrop-filter: none;
    background: rgba(252, 255, 49, 0.2);
}

#water-p {
    /*background: rgba(0, 255, 0, 0.2);*/
    box-sizing: border-box;
    width: 100%;

    margin: -3px 0 clamp(2px, 0.5cqw, 8px) 0;
    padding: 0;

    display: block;
    text-align: left;

    color: white;

    font-family: "Share Tech Mono", monospace;
    font-size: clamp(8px, 1cqw, 10px);
    line-height: 1.25;

    background: transparent;
    border: none;
    backdrop-filter: none;
}

/*------------power------------*/
#power-box {
    top: 46%;
    left: 61.5%;
    width: 16.8%;
    height: 44%;

    background: transparent;
    border: none;
    backdrop-filter: none;
    background: rgba(252, 255, 49, 0.2);
}

#power-p {
    /*background: rgba(0, 255, 0, 0.2);*/
    box-sizing: border-box;
    width: 100%;

    margin: -3px 0 clamp(2px, 0.5cqw, 8px) 0;
    padding: 0;

    display: block;
    text-align: left;

    color: white;

    font-family: "Share Tech Mono", monospace;
    font-size: clamp(8px, 1cqw, 10px);
    line-height: 1.25;

    background: transparent;
    border: none;
    backdrop-filter: none;
}
    
/*-----------thermal-----------*/
#thermal-box {
    top: 30%;
    left: 3%;
    width: 16.8%;
    height: 34%;

    background: transparent;
    border: none;
    backdrop-filter: none;
    background: rgba(252, 255, 49, 0.2);
}

#thermal-p {
    /*background: rgba(0, 255, 0, 0.2);*/
    box-sizing: border-box;
    width: 100%;

    margin: -3px 0 clamp(2px, 0.5cqw, 8px) 0;
    padding: 0;

    display: block;
    text-align: left;

    color: white;

    font-family: "Share Tech Mono", monospace;
    font-size: clamp(8px, 1cqw, 10px);
    line-height: 1.25;

    background: transparent;
    border: none;
    backdrop-filter: none;
}

/*------------isru-------------*/
#isru-box {
    top: 30%;
    left: 80.2%;
    width: 16.8%;
    height: 34%;

    background: transparent;
    border: none;
    backdrop-filter: none;
    background: rgba(252, 255, 49, 0.2);
}

#isru-p {
    /*background: rgba(0, 255, 0, 0.2);*/
    box-sizing: border-box;
    width: 100%;

    margin: -3px 0 clamp(2px, 0.5cqw, 8px) 0;
    padding: 0;

    display: block;
    text-align: left;

    color: white;

    font-family: "Share Tech Mono", monospace;
    font-size: clamp(8px, 1cqw, 10px);
    line-height: 1.25;

    background: transparent;
    border: none;
    backdrop-filter: none;
}

/*---------greenhouse----------*/
#gh-box {
    top: 3%;
    left: 80.2%;
    width: 16.8%;
    height: 24%;

    background: transparent;
    border: none;
    backdrop-filter: none;
    background: rgba(252, 255, 49, 0.2);
}

#gh-p {
    /*background: rgba(0, 255, 0, 0.2);*/
    box-sizing: border-box;
    width: 100%;

    margin: -3px 0 clamp(2px, 0.5cqw, 8px) 0;
    padding: 0;

    display: block;
    text-align: left;

    color: white;

    font-family: "Share Tech Mono", monospace;
    font-size: clamp(8px, 1cqw, 10px);
    line-height: 1.25;

    background: transparent;
    border: none;
    backdrop-filter: none;
}

